UPDATE: New Authentication for new db